--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Welcome to R for Biochemists"
 description: |
-  Welcome to our new blog, R for Biochemists. We hope you enjoy 
-  reading what we have to say!
+  Come and learn about R, for use in biochemistry!
 author:
   - name: Brady Johnston
     url: https://bradyajohnston.github.io
