--- a/_posts/2022-03-23-sample-post/sample-post.Rmd
+++ b/_posts/2022-03-23-sample-post/sample-post.Rmd
@@ -3,8 +3,8 @@ title: "Sample Post"
 description: |
   A short description of the post.
 author:
-  - name: Nora Jones
-    url: https://example.com/norajones
+  - name: Brady Johnston
+    url: https://twitter.com/bradyajohnston
 date: 2022-03-23
 output:
   distill::distill_article:
