some playing around on windows

--- a/posts/test-julia/index.ipynb
+++ b/posts/test-julia/index.ipynb
@@ -15,10 +15,9 @@
         "code-fold: show\n",
         "code-link: true\n",
         "code-line-numbers: true  \n",
-        "  \n",
         "---"
       ],
-      "id": "d6a16153"
+      "id": "41219cf8"
     },
     {
       "cell_type": "markdown",
@@ -26,7 +25,18 @@
       "source": [
         "# Below will be some `Julia` code."
       ],
-      "id": "9a7463af"
+      "id": "fea3f2cd"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "using Pkg\n",
+        "Pkg.add.([\"DataFrames\", \"Gadfly\", \"Plots\", \"CSV\", \"Cairo\"])"
+      ],
+      "id": "c803ebbf",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -35,7 +45,7 @@
         "using Plots\n",
         "Plots.plot(1:10, randn(10))"
       ],
-      "id": "f6798c00",
+      "id": "90f1163a",
       "execution_count": null,
       "outputs": []
     },
@@ -43,9 +53,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now that's ssome julia code!"
+        "Now that's some Julia code!\n",
+        "Testing.\n",
+        "Some more text!"
       ],
-      "id": "a5fd45d8"
+      "id": "08fd17f8"
     },
     {
       "cell_type": "code",
@@ -55,7 +67,7 @@
         "    println(i)\n",
         "end"
       ],
-      "id": "bce902d0",
+      "id": "9177e810",
       "execution_count": null,
       "outputs": []
     },
@@ -65,7 +77,7 @@
       "source": [
         "And some more text down here."
       ],
-      "id": "cbe3d8b4"
+      "id": "725d384d"
     },
     {
       "cell_type": "code",
@@ -98,7 +110,7 @@
         "    plot!(p[3], zs, alpha = 0.2, palette = cgrad(:blues).colors)\n",
         "end"
       ],
-      "id": "b5c14abb",
+      "id": "75bacf1e",
       "execution_count": null,
       "outputs": []
     },
@@ -110,7 +122,7 @@
         "#Pkg.add(\"DataFrames\")\n",
         "using DataFrames"
       ],
-      "id": "6e7586a2",
+      "id": "0e86930a",
       "execution_count": null,
       "outputs": []
     },
@@ -121,9 +133,12 @@
         "using CSV\n",
         "using DataFrames\n",
         "fl = \"/Users/brady/git/thesis/figures/data/smfret/all-traces.tsv\"\n",
+        "if Sys.iswindows() \n",
+        "    fl = \"C:/Users/BradyJohnston/Documents/GitHub/thesis/figures/data/smfret/all-traces.tsv\"\n",
+        "end \n",
         "df = DataFrame(CSV.File(fl; header = 1, delim = \"\\t\"))"
       ],
-      "id": "12fa82bf",
+      "id": "877b0010",
       "execution_count": null,
       "outputs": []
     },
@@ -131,9 +146,9 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "frames = df[:, \"frame\"]\n",
-        "don = df[:, \"don\"]\n",
-        "acc = df[:, \"acc\"]\n",
+        "frames = df[:, :frame]\n",
+        "don    = df[:, :don]\n",
+        "acc    = df[:, :acc]\n",
         "\n",
         "\n",
         "\n",
@@ -152,7 +167,7 @@
         "\n",
         "gif(anim, fps = 20)\n"
       ],
-      "id": "3c3e33cc",
+      "id": "11b6c8d3",
       "execution_count": null,
       "outputs": []
     },
@@ -178,7 +193,7 @@
         "\n",
         "gif(anim, fps = 10)"
       ],
-      "id": "7c3446c9",
+      "id": "caf8ce81",
       "execution_count": null,
       "outputs": []
     },
@@ -192,10 +207,16 @@
         "\n",
         "df2 = df2[in.(df2.variable, Ref([\"don\", \"acc\"])), :]\n",
         "\n",
-        "p = Gadfly.plot(x = df2.value, colour = df2.variable, Geom.histogram(bincount = 20))\n",
+        "p = Gadfly.plot(\n",
+        "    y = df2.value, \n",
+        "    colour = df2.variable, \n",
+        "    Geom.histogram(\n",
+        "        bincount = 20, \n",
+        "        orientation = :horizontal\n",
+        "        ))\n",
         "p"
       ],
-      "id": "2e23360b",
+      "id": "a5a97c58",
       "execution_count": null,
       "outputs": []
     },
@@ -203,18 +224,26 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "gridstack([p p; p p])"
+        "df3 = df[df.rna .== 1 .&& df.fret .<= 1 .&& df.fret .>= -0, :]\n",
+        "Gadfly.plot( \n",
+        "    y = df3.fret, \n",
+        "    Geom.histogram(\n",
+        "        bincount = 20, \n",
+        "        orientation = :horizontal\n",
+        "    ), \n",
+        "    Coord.cartesian(ymin = 0, ymax = 1)\n",
+        ")"
       ],
-      "id": "56ade214",
+      "id": "63fddd0f",
       "execution_count": null,
       "outputs": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "julia-1.7",
+      "name": "juliapro_v1.5.3-1-1.5",
       "language": "julia",
-      "display_name": "Julia 1.7.2"
+      "display_name": "JuliaPro_v1.5.3-1 1.5.3"
     }
   },
   "nbformat": 4,
