--- a/posts/test-julia/index.qmd
+++ b/posts/test-julia/index.qmd
@@ -23,9 +23,7 @@ using Plots
 Plots.plot(1:10, randn(10))
 ```
 
-Now that's some Julia code!
-Testing.
-Some more text!
+Now that's some Julia code! Testing. Some more text! And now some more!
 
 ```{julia}
 for i in 1:10
