some minor rending and playing around

--- a/posts/dose-response-curves/index.qmd
+++ b/posts/dose-response-curves/index.qmd
@@ -6,48 +6,53 @@ date: today
 author: Brady Johnston
 editor: visual
 toc: true
+number-sections: true
 image: enzymeplot.png
 toc-location: right
-code-fold: show
+code-fold: false
 code-link: true
 code-line-numbers: true  
 ---
 
 Playing around with modelling dose-response curves in R, to calculate a $K_{d}$ for an interaction between a protein and it's potential binding target.
-And now some more text.
+From this we can compare the rates of two enzymes, and see if our mutation had any effect.
+Ther results of which can be seen below in @tbl-plot-coefficients.[^1]
+
+[^1]: This isn't actually the best way to go about it.
+    There are far too many details, which are more useful if you are doing more advance modelling, but we are just after an estimate of the $K_{m}$ and the $V_{max}$ from our data.
 
 ```{r}
 library(biochemr)
 mod <- Puromycin %>% 
-  b_dose_resp(conc, rate, state, .model = drc::MM.2())
+  bio_enzyme_rate(conc, rate, group = state)
 
-purrr::map(mod$drmod, broom::glance)
+purrr::map(mod$model, broom::glance)
 ```
 
-
 ```{r}
-#| label: first-plot
+#| label: fig-first-plot
+#| fig-cap: The enzyme responses plotted using `bio_plot()` function.
+#| fig-cap-location: margin
 mod %>% 
-  b_plot(colour = state, facet = FALSE) + 
+  bio_plot(colour = state, facet = FALSE) + 
   ggplot2::coord_cartesian(ylim = c(0, NA))
 ```
 
-
 ```{r}
+#| label: tbl-plot-coefficients
+#| tbl-cap: The resulting coefficients from the model.
 mod %>% 
-  b_coefs() %>% 
+  bio_coefs() %>% 
   knitr::kable()
-mod %>% 
-  b_plot_coefs(state, term = "e")
 
 ```
 
-Is there actually a difference between the two sates? We can see their fits 
-inside of @fig-first-plot but we are unsure if it will actually be significant.
+Is there actually a difference between the two sates?
+We can see their fits inside of @fig-first-plot but we are unsure if it will actually be significant.
 We can compare the two models:
 
 ```{r}
-comp <- purrr::reduce(mod$drmod, anova) %>% 
+comp <- purrr::reduce(mod$model, anova) %>% 
   tibble::as_tibble() %>% 
   dplyr::mutate(model = as.character(mod$state))
 comp
@@ -59,21 +64,16 @@ By the looks of things, we probably couldn't say that there was actually a real 
 
 ```{r}
 #| message: false
+#| code-fold: true
 mod <- DNase %>% 
   tibble::as_tibble() %>% 
-  b_binding(conc, density, Run)
+  bio_binding(conc, density, Run)
 
  
-b_plot(mod,colour = Run)
+bio_plot(mod,colour = Run) + 
+  ggplot2::theme_classic()
 
 mod %>% 
-  dplyr::mutate(
-    comp = purrr::map(drmod, anova, object = mod$drmod[[1]]), 
-    comp_stat = purrr::map(comp, tibble::as_tibble)
-  ) %>% 
-  tidyr::unnest(comp_stat) %>% 
-  tidyr::drop_na(Df) %>% 
-  dplyr::select(Run, ModelDf, RSS, Df) %>% 
+  bio_coefs() %>% 
   knitr::kable()
 ```
-
